# social-scraper

./: .dockerignore  .env.example  .gitignore  .worktreeinclude  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: hermes-skill.md
scripts/: check-all.sh  ensure-uv.sh  lint.sh  test.sh  typecheck.sh
src/social_place_scraper/: __init__.py  challenges.py  cli.py  config.py  llm.py  login.py  maps.py  platforms.py  prompt.py  schemas.py  sessions.py
src/social_place_scraper/fetchers/: __init__.py  base.py  botasaurus_fetcher.py  cloakbrowser_fetcher.py  html_metadata.py  http_metadata.py
tests/: test_cli.py  test_login.py  test_maps.py  test_platforms.py  test_prompt.py
