[project]
name = "social-place-scraper"
version = "0.1.0"
description = "Clean-room social post location extraction pipeline for Hermes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "curl-cffi>=0.11.0",
    "openai>=1.0.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
browser = [
    "botasaurus>=4.0.0",
    "cloakbrowser>=0.1.0",
]

[project.scripts]
social-post-ingest = "social_place_scraper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
exclude-newer = "7 days"
