[project]
name = "social-place-scraper"
version = "0.1.0"
description = "Clean-room social post location extraction pipeline for Hermes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "curl-cffi>=0.11.0",
    "openai>=1.0.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
browser = [
    "botasaurus>=4.0.0",
    "cloakbrowser>=0.1.0",
]

[dependency-groups]
dev = [
    "coverage>=7.6,<8.0",
    "mypy>=1.14,<3.0",
    "pytest>=8.3,<10.0",
    "ruff>=0.14,<1.0",
]

[project.scripts]
social-post-ingest = "social_place_scraper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
required-version = ">=0.11.0"
exclude-newer = "7 days"

[tool.uv.pip]
exclude-newer = "7 days"

[tool.ruff]
line-length = 100
target-version = "py311"
src = [
    "src",
    "tests",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short --strict-markers"

[tool.mypy]
python_version = "3.11"
files = [
    "src",
    "tests",
]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["social_place_scraper"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
